# waterdynamics

./: .buildinfo  .codecov.yml  .gitattributes  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  api.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  outputs.html  py-modindex.html  pyproject.toml  readthedocs.yaml  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: api.doctree  environment.pickle  examples.doctree  getting_started.doctree  index.doctree  outputs.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yaml  docs.yaml  gh-ci.yaml
_modules/: index.html
_modules/waterdynamics/: waterdynamics.html
_sources/: getting_started.rst.txt  index.rst.txt
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  make.bat  requirements.yaml
docs/source/: api.rst  conf.py  examples.rst  getting_started.rst  index.rst  outputs.rst  references.bib
waterdynamics/: __init__.py  _version.py  waterdynamics.py
waterdynamics/data/: files.py
waterdynamics/tests/: conftest.py  test_waterdynamics.py
