[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "waterdynamics"
description = "Analysis of water dynamics in molecular dynamics trajectories and water interactions with other molecules."
license = {file = "LICENSE" }
authors = [
    {name = "MDAnalysis", email = "mdanalysis@numfocus.org"},
]
maintainers = [
    {name = "MDAnalysis", email = "mdanalysis@numfocus.org"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "MDAnalysis>=2.0.0",
]
keywords = [
    "molecular simulations",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-xdist>=2.5",
    "pytest-cov>=3.0",
    "MDAnalysisTests>=2.0.0"
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]

# [project.urls]
# source = "https://github.com/MDAnalysis/waterdynamics"
# documentation = "https://waterdynamics.readthedocs.io"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "waterdynamics/tests",
]

[tool.black]
line-length = 80
extend-exclude = "versioneer.py"
